--- a/Kevro.html
+++ b/Kevro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kevro-Mi_nombre_es_Kendrick</title>
-  <link rel="stylesheet" href="Kevro.css">
+  <link rel="stylesheet" href="./styles/Kevro.css">
 </head>
 <body>
   <header>
@@ -30,6 +30,7 @@
       <p>Criado en Compton, California, Kendrick inició su carrera como un adolescente, bajo el seudónimo K-Dot. Tras lanzar un mixtape que llamó la atención local y que le brindó su primer contrato con la discográfica independiente,Top Dawg Entertainment, Lamar lanzó los proyectos Overly Dedicated (2010) y Section.80 (2011) que le brindaron un masivo seguimiento en Internet y la oportunidad de colaborar con varios artistas importantes de la escena del hip hop.</p>
       <p>Luego de ganarse un contrato con la compañía discográfica de Dr. Dre, Interscope Records, Lamar abandonaría su faceta independiente y produciría su primer gran álbum de estudio, Good Kid, M.A.A.D City (2012). Descrito como "una corta película por Kendrick Lamar", el disco es un álbum conceptual sobre sus vivencias durante su adolescencia en la peligrosa ciudad de Compton; un éxito crítico y comercial, el disco siendo certificado platino por la Asociación Industrial Discográfica de Estados Unidos. Su siguiente álbum, To Pimp a Butterfly (2015), fue aclamado mundialmente por incorporar elementos de funk, soul, jazz y spoken word, y sus conceptos centrados alrededor de las problématicas en la experiencia de ser afroestadounidense, y el ascendiente estatus social de Lamar. Fue su primer álbum en debutar en el primer puesto en la lista Billboard 200 y es considerado el mejor disco de la década de los 2010.4​ Fue continuado con el lanzamiento de Untitled Unmastered (2016), una recopilación de demos que no llegaron a ser incluidos en To Pimp a Butterfly, y DAMN. (2017), que también fue un éxito rotundo; su sencillo principal HUMBLE. alcanzó el primer puesto en la lista Billboard Hot 100 y fue el primer álbum que ganó el Premio Pulitzer sin ser del género de jazz ni de música clásica. Tras cinco años sin sacar música, en 2022 Lamar volvería con un nuevo álbum, Mr. Morale & The Big Steppers.</p>
       <p>Lamar ganó muchos elogios y premios a lo largo de la carrera, incluyendo 13 Premios Grammy de 37 nominaciones de 2014 a 2019. También incluyen dos American Music Awards, cinco Billboard Music Awards, un Brit Award, 11 MTV Video Music Awards, un Pulitzer Prize y una nominación al Óscar. La revista Time lo incluyó entre las 100 personas más influyentes del mundo en 2016.5​ En 2015, recibió el premio Generational Icon Award del Senado Estatal de California. Tres de sus álbumes de estudio fueron incluidos en la lista de Rolling Stone de los 500 mejores álbumes de todos los tiempos.</p>
+      <p>(Extraido de Wikipedia)</p>
     </section>
 
     <section id="musicstyle">
@@ -42,46 +43,94 @@
     <section id="playlists">
       <h2>Listas de reproducción</h2>
       <div class="playlist">
-        <h3>Playlist 1</h3>
+        <h3>Playlist 1 (Albúm <a href="https://open.spotify.com/album/4eLPsYPBmXABThSJ821sqY?si=BhucdeODRVSfa6Bcr8Ya8Q">"DAMN"</a>)</h3>
         <ul>
-          <li>Canción 1</li>
-          <li>Canción 2</li>
-          <li>Canción 3</li>
+          <li><a href="https://open.spotify.com/track/1n4jwRVXdkK2U34nBDUKKT?si=9d55a14b80b54cfe">BLOOD.</a></li>
+          <li><a href="https://open.spotify.com/track/6HZILIRieu8S0iqY8kIKhj?si=033754fe51304d56">DNA.</a></li>
+          <li><a href="https://open.spotify.com/track/4BHSjbYylfOH5WAGusDyni?si=baae9c98724a4329>">YAH.</a></li>
+          <li><a href="https://open.spotify.com/track/2LTlO3NuNVN70lp2ZbVswF?si=cc33f19d15644964">ELEMENT.</a></li>
+          <li><a href="https://open.spotify.com/track/6SwRhMLwNqEi6alNPVG00n?si=a375a89ef6c047bf">FEEL.</a></li>
+          <li><a href="https://open.spotify.com/track/6IZvVAP7VPPnsGX6bvgkqg?si=1fa033d295c54d62">LOYALTY.FEAT.RIHANNA.</a></li>
+          <li><a href="https://open.spotify.com/track/7KXjTSCq5nL1LoYtL7XAwS?si=4b39f8fe3176404a">PRIDE.</a></li>
+          <li><a href="https://open.spotify.com/track/06FCvd7rrRcF3DdvWH5Isp?si=36b2b305005f43db">HUMBLE.</a></li>
+          <li><a href="https://open.spotify.com/track/6PGoSes0D9eUDeeAafB2As?si=01ded23907864b57">LUST.</a></li>
+          <li><a href="https://open.spotify.com/track/4iYRa2btalAzPZoSYfROqF?si=7c6884f082bd472c">LOVE.FEAT.ZACARI.</a></li>
+          <li><a href="https://open.spotify.com/track/23luOrEVHMfoX0AhfbQuS6?si=522e9b8caa1d42fc">XXX.FEAT.U2.</a></li>
+          <li><a href="https://open.spotify.com/track/5p3NP9mQblDsVJLdfNZJ3I?si=2b6add17aac34807">FEAR.</a></li>
+          <li><a href="https://open.spotify.com/track/5p3NP9mQblDsVJLdfNZJ3I?si=78b323ae01fa4d3b">GOD.</a></li>
+          <li><a href="https://open.spotify.com/track/0y9uTzK9cNKSAEHnpeRG8C?si=4d9ac33aaab34479">DUCKWORTH.</a></li>
         </ul>
       </div>
-      <div class="playlist">
-        <h3>Playlist 2</h3>
-        <ul>
-          <li>Canción 4</li>
-          <li>Canción 5</li>
-          <li>Canción 6</li>
-        </ul>
-      </div>
-    </section>
 
     <section id="songs">
-      <h2>Canciones</h2>
+      <h2>Canciones (TIER LIST)</h2>
       <div class="song">
-        <h3>Canción 1</h3>
+        <h3>Canción 1 ("MONEY TREES")</h3>
         <audio controls>
-          <source src="canciones/cancion1.mp3" type="audio/mpeg">
-          Tu navegador no soporta el elemento de audio.
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Money Trees(MP3_128K).mp3" type="audio/mpeg">
         </audio>
       </div>
       <div class="song">
         <h3>Canción 2</h3>
         <audio controls>
-          <source src="canciones/cancion2.mp3" type="audio/mpeg">
-          Tu navegador no soporta el elemento de audio.
+          <source src="c:\Users\Kevin\Documents\GitHub\PROYECTO\musica\THE SCOTTS_ Travis Scott_ Kid Cudi - THE SCOTTS (Audio)(MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 3</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - 5_ TINT (Audio)(MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 4</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - 90210 ft. Kacy Hill(MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 5</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - Antidote(MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 6</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - ASTROTHUNDER (Lyrics _ Subtitulado) [Visuals by _Vulture HD_](MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 7("GOOSEBUMPS TRAVIS SCOTT.FT.KENDRICK LAMAR")</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - goosebumps ft. Kendrick Lamar(MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 8</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - HIGHEST IN THE ROOM (Official Music Video)(MP3_128K).mp3" type="audio/mpeg"> 
+        </audio>
+      </div>
+      <div class="song">
+        <h3>Canción 9</h3>
+        <audio controls>
+          <source src="C:\Users\Kevin\Documents\GitHub\PROYECTO\musica\Travis Scott - SICKO MODE ft. Drake(MP3_128K).mp3" type="audio/mpeg"> 
         </audio>
       </div>
     </section>
   </main>
 
+  
+  <div id="buttonForm">
+    <a href="KevroFormulario.html" >Comprar disco de Kendrick Lamar ("DAMN")</a>
+  </div>
+  
+
   <footer>
     <p>&copy; 2023 Kevro. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="Kevro.js"></script>
+  <script src="./js/Kevro.js"></script>
 </body>
 </html>
